# bijmantra

./: .deptry.toml  .env.example  .env.production.example  .gitignore  .gitlab-ci.yml  .import-linter.ini  .public-exclude  AGENTS.md  AUTONOMOUS_PROGRESS.md  CODEBASE_AUDIT.md  CODE_OF_CONDUCT.md  COMMERCIAL_LICENSE.md  CONTRIBUTING.md  CONTRIBUTOR_ENTRY.md  CRITICAL_TODOS.md  Caddyfile  Caddyfile.prod  Caddyfile.tunnel  DEVELOPMENT_STATUS.md  Dockerfile.bijmantra-sandbox  ETHICAL_USE_POLICY.md  FRONTEND_IMPLEMENTATION.md  FUNDING.md  IMPLEMENTATION_SUMMARY.md  InitializeApp.ps1  InitializeApp.sh  LICENSE  Makefile  PROJECT_STATUS.md  QUICK_START.md  README.md  README_DEEP_DIVE.md  RELEASE.md  RELEASE_v1.0.0.md  SECURITY.md  SPONSORS.md  UI_MODERNIZATION_COMPLETE.md  bijmantra.code-workspace  compose.beingbijmantra.yaml  compose.dev.yaml  (+21 more)
backend/: .dockerignore  .import-linter.ini  ARCHITECTURE_VIOLATIONS.md  ARCHITECTURE_VIOLATIONS_FIXED.md  CANONICAL_FEATURE_MAPPING.md  Containerfile  DEPENDENCY_AUDIT_2025.md  Dockerfile  Dockerfile.worker  MIGRATION_SUMMARY_5.3.md  README.md  WORKER_QUICKSTART.md  alembic.ini  check_output.txt  create_schema.sql  create_user.sql  fix_migration.py  nixpacks.toml  pyproject.toml  requirements.sandbox.txt  requirements.txt  run_migrations.py  smoke_test_executor.py  start_dev.sh  test_api.py  test_api_quota.py  uvicorn_log.txt  verify_ai_quota.py  verify_compute_wrappers.py
backend/alembic/: env.py
backend/alembic/versions/: 001_initial_core_schema.py  003_add_vector_store.py  004_seed_bank_tables.py  005_security_audit_tables.py  006_row_level_security.py  007_schema_per_division.py  008_iot_sensor_network.py  009_germplasm_tables.py  010_phenotyping_tables.py  011_genotyping_tables.py  012_brapi_core_tables.py  013_user_management_tables.py  014_stress_resistance_field_ops.py  015_data_management_tables.py  016_collaboration_reporting_tables.py  017_workspace_preferences.py  018_brapi_phenotyping_reference_tables.py  019_devguru_tables.py  020_program_research_flag.py  021_devguru_phases_3_4_5.py  022_user_roles_rbac.py  023_complete_rls_coverage.py  024_add_system_settings_table.py  025_add_cross_id_to_germplasm.py  026_add_chat_messages.py  027_user_dock_preferences.py  028_fix_datetime_timezone.py  029_future_modules_tables.py  030_dispatch_firm_tables.py  031_dus_testing_tables.py  032_doubled_haploid_tables.py  033_phenomic_selection_tables.py  034_space_research_tables.py  035_enhance_gdd_tables_for_production.py  036_enhance_gdd_tables_for_production_update.py  037_add_gdd_audit_log_table.py  038_add_gdd_predictions_table.py  039_add_climate_tables_only.py  040_add_accession_uuid.py  041_add_ai_quota.py  (+39 more)
backend/app/: __init__.py  db_seed.py  domain_registry.yaml  main.py  prompts.yaml
backend/app/api/: auth.py  deps.py
backend/app/core/: __init__.py  authorization.py  caching.py  config.py  database.py  demo_dataset.py  events.py  features.py  http_tracing.py  meilisearch.py  password_validation.py  permissions.py  redis.py  rls.py  secrets.py  security.py  security_config.py  service_registry.py  signature.py  socketio.py  (+1 more)
backend/docs/: COMPUTE_INTERFACE_PATTERN.md  WORKER_DEPLOYMENT.md  compute_interfaces.md
backend/examples/: compute_interface_example.py
backend/scripts/: README.md  add_auth_guard.py  add_auth_guard_phase2.py  audit_vajra_rls.py  bootstrap_project_brain_snapshot.py  bootstrap_project_brain_surreal.py  bootstrap_project_brain_surreal_schema.py  brapi_v2_1_compliance_validator.py  check_service_migration.py  check_syntax.py  compare_reevu_kpi_delta.py  demo_crdt_sync.py  ensure_ai_configuration_schema.py  eval_cross_domain_reasoning.py  eval_domain_accuracy_matrix.py  eval_real_question_benchmark.py  eval_top_intent_routing.py  eval_trace_completeness.py  generate_agronomy_tests.py  generate_reevu_acceptance_pack.py  generate_reevu_authority_gap_report.py  generate_reevu_ops_report.py  generate_stage_a_kpi_report.py  migration_doctor.py  migration_seed_inventory_tables.sql  monitor_workers.py  parquet_schema_validator_script.py  poc_rls_fix.py  query_project_brain_snapshot.py  query_project_brain_surreal.py  run_reevu_gate_v2.sh  simulate_nightly_etl.py  sso_integration_poc.py  start_workers.sh  stop_workers.sh  system_health_check.py  test_sadhana.py  test_science_engines.sh  update_test_passwords.py  validate_api_registry.py  (+12 more)
backend/test_reports/: frontend-backend-workflow-audit-2026-03-24.md  reevu_acceptance_pack.json  reevu_acceptance_pack.md  reevu_authority_gap_report.json  reevu_authority_gap_report_org2.json  reevu_cross_domain_reasoning_baseline.json  reevu_cross_domain_reasoning_baseline_2026-02-25T1354.json  reevu_kpi_delta_report.json  reevu_local_readiness_census.json  reevu_local_readiness_census_org2.json  reevu_ops_report.json  reevu_ops_report.md  reevu_ops_report_2026-02-25T1354.json  reevu_real_question_local.json  reevu_real_question_local_org2.json  reevu_stage_a_kpi_report.json  reevu_top_intent_routing_baseline.json  reevu_trace_completeness_baseline.json
backend/tests/: conftest.py  test_adr006_veena_rls_sql.py  test_brapi_pedigree.py  test_brapi_public.py  test_breeding_pipeline_perf.py  test_compute_interface.py  test_compute_monitoring.py  test_gdd_api_imports.py  test_gdd_calculator_service.py  test_ontology_formulas.py  test_performance.py  test_performance_api_stats.py  test_phenology_service.py  test_seedlots_api_unit.py  test_smoke_api_v2.py  test_veena_cognitive_service.py
fortran/: CMakeLists.txt  README.md
fortran/cmake/: bijmantra_compute_config.cmake.in
fortran/src/: blup_solver.f90  c_interface.f90  gxe_analysis.f90  kinship.f90  ld_analysis.f90  pca_svd.f90  reml_engine.f90  selection_index.f90  stability_analysis.f90
fortran/tests/: test_blup.f90  test_kinship.f90  test_reml.f90
rust/: Cargo.toml  README.md  build.rs  build.sh  error.md  mock_fortran.c
rust/.cargo/: config.toml
rust/src/: fortran_ffi.rs  genomics.rs  lib.rs  matrix.rs  population.rs  python_bindings.rs  sequence.rs  statistics.rs  utils.rs
rust/tests/: pca_perf.rs  web.rs
(+2935 files in other folders)
